<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activityViewModel"
            type="com.udacity.shoestore.ActivityViewModel" />
    </data>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/detail_name_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_name_label_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_title_tv" />

            <EditText
                android:id="@+id/detail_name_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/detail_name_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:text="@={activityViewModel.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_name_label_tv"
                />

            <TextView
                android:id="@+id/detail_description_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_description_label_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_name_et" />

            <EditText
                android:id="@+id/detail_descriptipn_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/detail_description_hint"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_description_label_tv" />

            <TextView
                android:id="@+id/detail_size_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_size_label_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_descriptipn_et" />

            <EditText
                android:id="@+id/detail_size_etnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/detail_size_hint"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_size_label_tv" />

            <TextView
                android:id="@+id/detail_company_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/detail_company_label_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_size_etnd" />

            <EditText
                android:id="@+id/detail_company_ed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/detail_company_hint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_company_label_tv" />

            <Button
                android:id="@+id/detail_cancle_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_cancle_bt_text"
                app:layout_constraintBottom_toBottomOf="@+id/detail_save_bt"
                app:layout_constraintEnd_toStartOf="@+id/detail_save_bt"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/detail_save_bt" />

            <Button
                android:id="@+id/detail_save_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/detail_save_bt_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/detail_cancle_bt"
                app:layout_constraintTop_toBottomOf="@+id/detail_company_ed" />

            <TextView
                android:id="@+id/detail_title_tv"
                style="@style/informativ_header_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_title_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.104" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>