<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9A94BFC5"
        android:backgroundTint="#9A94BFC5"
        android:theme="@style/AppTheme.NoActionBar">

        <TextView
            android:id="@+id/welcome_title_tv"
            style="@style/informativ_header_style"
            android:text="@string/welcome_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <TextView
            android:id="@+id/welcome_text_tv"
            style="@style/informativ_contens_style"
            android:text="@string/welcome_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_title_tv" />

        <Button
            android:id="@+id/next_bt"
            android:text="@string/next_bt_text"
            app:cornerRadius="50sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_tv"
            style="@style/buttonstyle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>